--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <html>
     <head>
         <title>Podoro</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <main>
-           
+           <div class="titleBar">Podoro</div>
         </main>
     </body>
 </html>
