--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
+        <div class="titleBar">Podoro</div>
         <main>
-           <div class="titleBar">Podoro</div>
+           <aside> <img src="media/logoHorizontal.svg" alt=""></aside>
         </main>
     </body>
 </html>
