Implement user registration and login with email validation

--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <html>
-    <head>
-        <title>Podoro</title>
-        <link rel="stylesheet" href="styles.css">
-    </head>
-    <body>
-        <div class="titleBar">Podoro</div>
-        <main>
-           <aside> <img src="media/logoHorizontal.svg" alt=""></aside>
-        </main>
-    </body>
+  <head>
+    <title>Podoro</title>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <div id="login-section">
+      <h2>Login / Register</h2>
+      <input type="email" id="email" placeholder="email" />
+      <input type="password" id="password" placeholder="Password" />
+      <button id="registerButton">Register</button>
+      <button id="loginButton">Login</button>
+    </div>
+
+    <script src="renderer.js"></script>
+  </body>
 </html>
