--- a/index.html
+++ b/index.html
@@ -6,8 +6,14 @@
   <body>
     <div id="login-section">
       <h2>Login / Register</h2>
-      <input type="email" id="email" placeholder="email" />
-      <input type="password" id="password" placeholder="Password" />
+      <div class="input-container">
+      <label for="email">Email:</label>
+      <input class="input-primary" type="email" id="email" placeholder="email" />
+      </div>
+      <div class="input-container">
+      <label for="email">Password:</label>
+      <input class="input-primary" type="password" id="password" placeholder="Password" />
+      </div>
       <button id="registerButton">Register</button>
       <button id="loginButton">Login</button>
     </div>
