add styles in buttons and fix html tags

--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
       <label for="email">Password:</label>
       <input class="input-primary" type="password" id="password" placeholder="Password" />
       </div>
-      <button id="registerButton">Register</button>
-      <button id="loginButton">Login</button>
+      <button class="button-primary M" id="loginButton">Login</button>
+        <p class="paragraph-small">Don’t have an account? 
+        <button class="button-terciary S" id="registerButton">Register</button>
+        </p>
     </div>
 
     <script src="renderer.js"></script>
