--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <div class="titleBar">Podoro</div>
     <div id="login-section">
-      <h2>Login / Register</h2>
+      <h2>Login</h2>
       <div class="input-container">
       <label for="email">Email:</label>
       <input class="input-primary" type="email" id="email" placeholder="email" />
