add styles for positioning log in

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <div class="titleBar">Podoro</div>
-    <div id="login-section">
+    <div class="login-section">
       <h2>Login</h2>
       <div class="input-container">
       <label for="email">Email:</label>
