add RegisterUI to toggle login/register layout

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <body>
     <div class="titleBar">Podoro</div>
     <div class="login-section">
-      <h2>Login</h2>
+      <h2 id="form-title">Login</h2>
       <div class="input-container">
       <label for="email">Email:</label>
       <input class="input-primary" type="email" id="email" placeholder="email" />
@@ -21,6 +21,6 @@
         </p>
     </div>
 
-    <script src="renderer.js"></script>
+    <script type="module" src="renderer.js"></script>
   </body>
 </html>
