fix indentation of renderer,index and registerUI files

--- a/index.html
+++ b/index.html
@@ -1,26 +1,27 @@
 <html>
-  <head>
-    <title>Podoro</title>
-    <link rel="stylesheet" href="styles.css" />
-  </head>
-  <body>
-    <div class="titleBar">Podoro</div>
-    <div class="login-section">
-      <h2 id="form-title">Login</h2>
-      <div class="input-container">
-      <label for="email">Email:</label>
-      <input class="input-primary" type="email" id="email" placeholder="email" />
-      </div>
-      <div class="input-container">
-      <label for="email">Password:</label>
-      <input class="input-primary" type="password" id="password" placeholder="Password" />
-      </div>
-      <button class="button-primary M" id="loginButton">Login</button>
-        <p class="paragraph-small">Don’t have an account? 
-        <button class="button-terciary S" id="registerButton">Register</button>
-        </p>
-    </div>
+    <head>
+        <title>Podoro</title>
+        <link rel="stylesheet" href="styles.css" />
+    </head>
+    <body>
+        <div class="titleBar">Podoro</div>
+        <div class="login-section">
+            <h2 id="form-title">Login</h2>
+            <div class="input-container">
+                <label for="email">Email:</label>
+                <input class="input-primary" type="email" id="email" placeholder="email" />
+            </div>
+            <div class="input-container">
+                <label for="email">Password:</label>
+                <input class="input-primary" type="password" id="password" placeholder="Password" />
+            </div>
+            <button class="button-primary M" id="loginButton">Login</button>
+            <p class="paragraph-small">
+                Don’t have an account?
+                <button class="button-terciary S" id="registerButton">Register</button>
+            </p>
+        </div>
 
-    <script type="module" src="renderer.js"></script>
-  </body>
+        <script type="module" src="renderer.js"></script>
+    </body>
 </html>
