--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <head>
         <title>Podoro</title>
         <link rel="stylesheet" href="styles.css" />
+        <link rel="stylesheet" href="calendar.css" />
     </head>
     <body>
         <div class="titleBar">Podoro</div>
