--- a/client/index.html
+++ b/client/index.html
@@ -3,6 +3,7 @@
         <title>Podoro</title>
         <link rel="stylesheet" href="styles.css" />
         <link rel="stylesheet" href="calendar.css" />
+        <link rel="stylesheet" href="pomodoro.css" />
     </head>
     <body>
         <div class="titleBar">Podoro</div>
