--- a/client/index.html
+++ b/client/index.html
@@ -18,7 +18,7 @@
             </div>
             <button class="button-primary M" id="loginButton">Login</button>
             <p class="paragraph-small">
-                Don't have an account?
+                Don’t have an account?
                 <button class="button-terciary S" id="registerButton">Register</button>
             </p>
         </div>
